@@ -1,3 +1,10 @@
+2011-05-25  Jason Merrill  <jason@redhat.com>
+
+	PR c++/48292
+	* pt.c (tsubst_decl) [PARM_DECL]: Handle partial instantiation of
+	function parameter pack.
+	(tsubst_pack_expansion): Likewise.
+
 2011-05-25  Jakub Jelinek  <jakub@redhat.com>
 
 	PR c++/49136
